@@ -5,21 +5,24 @@ package com.loadingbyte.cinecred.natives.harfbuzz;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.CLinker.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
+/**
+ * {@snippet :
+ * struct hb_blob_t* (*hb_reference_table_func_t)(struct hb_face_t* face,unsigned int tag,void* user_data);
+ * }
+ */
 public interface hb_reference_table_func_t {
 
-    jdk.incubator.foreign.MemoryAddress apply(jdk.incubator.foreign.MemoryAddress x0, int x1, jdk.incubator.foreign.MemoryAddress x2);
-    static MemoryAddress allocate(hb_reference_table_func_t fi) {
-        return RuntimeHelper.upcallStub(hb_reference_table_func_t.class, fi, constants$0.hb_reference_table_func_t$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;ILjdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;");
+    java.lang.foreign.MemorySegment apply(java.lang.foreign.MemorySegment face, int tag, java.lang.foreign.MemorySegment user_data);
+    static MemorySegment allocate(hb_reference_table_func_t fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$0.const$15, fi, constants$0.const$14, scope);
     }
-    static MemoryAddress allocate(hb_reference_table_func_t fi, ResourceScope scope) {
-        return RuntimeHelper.upcallStub(hb_reference_table_func_t.class, fi, constants$0.hb_reference_table_func_t$FUNC, "(Ljdk/incubator/foreign/MemoryAddress;ILjdk/incubator/foreign/MemoryAddress;)Ljdk/incubator/foreign/MemoryAddress;", scope);
-    }
-    static hb_reference_table_func_t ofAddress(MemoryAddress addr) {
-        return (jdk.incubator.foreign.MemoryAddress x0, int x1, jdk.incubator.foreign.MemoryAddress x2) -> {
+    static hb_reference_table_func_t ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
+        return (java.lang.foreign.MemorySegment _face, int _tag, java.lang.foreign.MemorySegment _user_data) -> {
             try {
-                return (jdk.incubator.foreign.MemoryAddress)constants$1.hb_reference_table_func_t$MH.invokeExact((Addressable)addr, x0, x1, x2);
+                return (java.lang.foreign.MemorySegment)constants$0.const$16.invokeExact(symbol, _face, _tag, _user_data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
